; ModuleID = '/home/carl/AnghaBench/mongoose/test/ccgi-1.2/extr_crypt.c_digest.c'
source_filename = "/home/carl/AnghaBench/mongoose/test/ccgi-1.2/extr_crypt.c_digest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SALT_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i8*, i8*, i8*)* @digest to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @digest(i8* %0, i32 %1, i8* %2, i8* %3, i8* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %13 = call i32 (...) @EVP_sha1()
  %14 = call i32 @EVP_DigestInit(i32* %11, i32 %13)
  %15 = load i8*, i8** %9, align 8
  %16 = load i32, i32* @SALT_SIZE, align 4
  %17 = call i32 @EVP_DigestUpdate(i32* %11, i8* %15, i32 %16)
  %18 = load i8*, i8** %8, align 8
  %19 = load i8*, i8** %8, align 8
  %20 = call i32 @strlen(i8* %19)
  %21 = call i32 @EVP_DigestUpdate(i32* %11, i8* %18, i32 %20)
  %22 = load i8*, i8** %6, align 8
  %23 = load i32, i32* %7, align 4
  %24 = call i32 @EVP_DigestUpdate(i32* %11, i8* %22, i32 %23)
  %25 = load i8*, i8** %10, align 8
  %26 = call i32 @EVP_DigestFinal(i32* %11, i8* %25, i32* %12)
  ret void
}

declare dso_local i32 @EVP_DigestInit(i32*, i32) #1

declare dso_local i32 @EVP_sha1(...) #1

declare dso_local i32 @EVP_DigestUpdate(i32*, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @EVP_DigestFinal(i32*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
